attempt to fix issue with background showing on homepage
image was not showing on homepage

--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ ul {
 
 
   .module {
-  background: url(background.jpg);
+  background: url(home_background.JPG);
   background-position: center;
   background-attachment: fixed;
   width: 100vw;
